--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Food & Microbes Taxa - Microbiome - food interaction</title>
+    <title>Food & Microbes - Microbiome amd food interactions</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <script>
@@ -75,12 +75,12 @@
                     <button onclick="showSection('taxon')" 
                             class="nav-item w-full flex items-center space-x-3 px-4 py-3 text-left rounded-lg transition-colors duration-200 bg-scientific-blue text-white">
                         <i class="fas fa-microscope"></i>
-                        <span class="font-medium">Análisis por Taxón</span>
+                        <span class="font-medium">Filtering by taxa</span>
                     </button>
                     <button onclick="showSection('food')" 
                             class="nav-item w-full flex items-center space-x-3 px-4 py-3 text-left rounded-lg transition-colors duration-200 text-gray-700 hover:bg-gray-100">
                         <i class="fas fa-utensils"></i>
-                        <span class="font-medium">Análisis por Comida</span>
+                        <span class="font-medium">Filtering by food</span>
                     </button>
                 </div>
                 
