--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
                             <span class="font-semibold">89</span>
                         </div>
                         <div class="flex justify-between">
-                            <span class="text-gray-600">Relaciones (+):</span>
+                            <span class="text-gray-600">Relations (+):</span>
                             <span class="font-semibold text-data-green">287</span>
                         </div>
                         <div class="flex justify-between">
-                            <span class="text-gray-600">Relaciones (-):</span>
+                            <span class="text-gray-600">Relations (-):</span>
                             <span class="font-semibold text-data-red">156</span>
                         </div>
                     </div>
@@ -124,12 +124,12 @@
                         <div class="p-6 border-b border-gray-200">
                             <h3 class="text-lg font-semibold text-gray-900 mb-4 flex items-center">
                                 <i class="fas fa-search text-scientific-blue mr-2"></i>
-                                Búsqueda y Selección de Taxón
+                                Taxon search and selection
                             </h3>
                             <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
                                 <div class="relative">
                                     <label class="block text-sm font-medium text-gray-700 mb-2">
-                                        Buscar Taxón (ID o Nombre)
+                                        Taxon search (ID o name)
                                     </label>
                                     <div class="relative">
                                         <input type="text" 
@@ -159,7 +159,7 @@
                                 </div>
                                 
                                 <div id="taxon-info" class="bg-gray-50 rounded-lg p-4 hidden">
-                                    <h4 class="font-medium text-gray-900 mb-2">Información del Taxón</h4>
+                                    <h4 class="font-medium text-gray-900 mb-2">Taxon information</h4>
                                     <div id="taxon-details" class="space-y-1 text-sm text-gray-600">
                                         <!-- Información del taxón seleccionado -->
                                     </div>
@@ -190,7 +190,7 @@
                         <div class="p-6 border-b border-gray-200">
                             <h3 class="text-lg font-semibold text-gray-900 mb-4 flex items-center">
                                 <i class="fas fa-table text-scientific-blue mr-2"></i>
-                                Relaciones con Alimentos
+                                Food relations
                             </h3>
                             <div id="relations-content" class="hidden">
                                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
@@ -199,7 +199,7 @@
                                         <div class="p-4 border-b border-green-200">
                                             <h4 class="font-medium text-green-800 flex items-center">
                                                 <i class="fas fa-plus-circle mr-2"></i>
-                                                Relaciones Positivas
+                                                Positive relations
                                             </h4>
                                         </div>
                                         <div class="p-4">
@@ -214,7 +214,7 @@
                                         <div class="p-4 border-b border-red-200">
                                             <h4 class="font-medium text-red-800 flex items-center">
                                                 <i class="fas fa-minus-circle mr-2"></i>
-                                                Relaciones Negativas
+                                                Negative relations
                                             </h4>
                                         </div>
                                         <div class="p-4">
@@ -2213,9 +2213,9 @@
             document.getElementById('taxon-info').classList.remove('hidden');
             document.getElementById('taxon-details').innerHTML = `
                 <div class="flex justify-between"><span>ID:</span><span class="font-medium">${taxonId}</span></div>
-                <div class="flex justify-between"><span>Nombre:</span><span class="font-medium">${data.name}</span></div>
-                <div class="flex justify-between"><span>Relaciones (+):</span><span class="font-medium text-green-600">${data.positiveRelations.length}</span></div>
-                <div class="flex justify-between"><span>Relaciones (-):</span><span class="font-medium text-red-600">${data.negativeRelations.length}</span></div>
+                <div class="flex justify-between"><span>Microorganism:</span><span class="font-medium">${data.name}</span></div>
+                <div class="flex justify-between"><span>Relations (+):</span><span class="font-medium text-green-600">${data.positiveRelations.length}</span></div>
+                <div class="flex justify-between"><span>Relations (-):</span><span class="font-medium text-red-600">${data.negativeRelations.length}</span></div>
             `;
 
             document.getElementById('relations-content').classList.remove('hidden');
