--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div>
                     <h1 class="text-xl font-bold text-gray-900">FoodTaxa</h1>
-                    <p class="text-sm text-gray-500">Análisis de Microbioma y Alimentación</p>
+                    <p class="text-sm text-gray-500">Microbiome & Food analysis</p>
                 </div>
             </div>
             <div class="flex items-center space-x-4">
@@ -86,14 +86,14 @@
                 
                 <!-- Stats Section -->
                 <div class="mt-8 p-4 bg-gray-50 rounded-lg">
-                    <h3 class="text-sm font-semibold text-gray-700 mb-3">Estadísticas</h3>
+                    <h3 class="text-sm font-semibold text-gray-700 mb-3">Stats</h3>
                     <div class="space-y-2 text-xs">
                         <div class="flex justify-between">
-                            <span class="text-gray-600">Taxones únicos:</span>
+                            <span class="text-gray-600">Number of microorganisms:</span>
                             <span class="font-semibold">156</span>
                         </div>
                         <div class="flex justify-between">
-                            <span class="text-gray-600">Alimentos únicos:</span>
+                            <span class="text-gray-600">Number of foods:</span>
                             <span class="font-semibold">89</span>
                         </div>
                         <div class="flex justify-between">
@@ -115,8 +115,8 @@
             <div id="taxon-section" class="h-full overflow-y-auto scrollbar-thin">
                 <div class="p-6">
                     <div class="mb-6">
-                        <h2 class="text-2xl font-bold text-gray-900 mb-2">Análisis por Taxón</h2>
-                        <p class="text-gray-600">Explore las relaciones entre taxones microbianos y alimentos</p>
+                        <h2 class="text-2xl font-bold text-gray-900 mb-2">Taxon analysis</h2>
+                        <p class="text-gray-600">Explore food taxon interactions</p>
                     </div>
 
                     <!-- Módulo 1: Búsqueda y Selección de Taxón - VERSIÓN PREDICTIVA -->
@@ -168,7 +168,7 @@
                             
                             <!-- Búsqueda reciente y sugerencias populares -->
                             <div class="mt-4 flex flex-wrap gap-2">
-                                <span class="text-xs text-gray-500 mr-2">Búsquedas populares:</span>
+                                <span class="text-xs text-gray-500 mr-2">Popular searchs:</span>
                                 <button onclick="selectTaxonFromTag('216851')" class="text-xs bg-blue-100 text-blue-700 px-2 py-1 rounded hover:bg-blue-200 transition-colors">
                                     Faecalibacterium
                                 </button>
@@ -2205,7 +2205,7 @@
         }
     }
 
-        // Funciones para análisis por taxón
+        // Funciones para Taxon analysis
         function loadTaxonData(taxonId) {
             const data = foodTaxaData[taxonId];
             if (!data) return;
